--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular-animate": "^1.4.1",
     "angular-aria": "^1.4.0",
     "angular-material": "^0.11.1",
-    "angular-devise": "^1.1"
+    "angular-devise": "^1.1",
+    "ng-file-upload": "^11.0.0"
   }
 }
